@@ -140,7 +140,7 @@ public class FormDataMasterProduct {
         && productNamesLive.getValue() != null
         && productNamesLive.getValue().contains(nameLive.getValue())
     ) {
-      nameErrorLive.setValue(R.string.error_name_exists);
+      nameErrorLive.setValue(R.string.error_already_exists);
       return false;
     }
     nameErrorLive.setValue(null);
