@@ -515,7 +515,6 @@ Po zaškrtnutí nebude brán zřetel na množství produktu v nákupním seznamu
   <string name="error_offline">Nepřipojen k serveru</string>
   <string name="error_offline_subtitle">K zobrazení této stránky potřebujete připojení k internetu.</string>
   <string name="error_no_done_items">Zatím není nic vloženo do nákupního košíku</string>
-  <string name="error_name_exists">Toto jméno již existuje</string>
   <string name="error_network">Chyba sítě</string>
   <string name="error_network_subtitle">Potřebná data nemohla být načtena</string>
   <string name="error_network_exact">Chyba sítě: %1$s</string>
