@@ -471,7 +471,6 @@
   <string name="error_offline">Offline</string>
   <string name="error_offline_subtitle">Diese Seite funktioniert nur mit Internet-Zugriff. Überprüfen Sie Ihre Verbindung.</string>
   <string name="error_no_done_items">Es sind keine Einträge als erledigt markiert</string>
-  <string name="error_name_exists">Name existiert bereits</string>
   <string name="error_network">Netzwerkfehler</string>
   <string name="error_network_subtitle">Die benötigten Daten konnten nicht vollständig geladen werden</string>
   <string name="error_network_exact">Netzwerkfehler: %1$s</string>
